# InquirerPy

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: cd.yml  ci.yml  compat.yml
InquirerPy/: enum.py  utils.py
InquirerPy/base/: control.py  list.py  simple.py
InquirerPy/prompts/: checkbox.py  confirm.py  expand.py  fuzzy.py  input.py  list.py  number.py  secret.py
docs/: conf.py  index.md
docs/pages/: compat_report.md  compatibility.md  faq.md
scripts/: compat_check.py
tests/: conftest.py
