[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["InquirerPy"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = ["if TYPE_CHECKING:"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "InquirerPrompt"
version = "0.3.1"
description = "Python port of Inquirer.js — a collection of common interactive command-line user interfaces (community-maintained fork of InquirerPy)"
authors = ["Kevin Zhuang <kevin7441@gmail.com>"]
maintainers = ["Tobias Hochgürtel <tobiashochguertel@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/tobiashochguertel/InquirerPy"
documentation = "https://InquirerPrompt.readthedocs.io"
license = "MIT"
keywords = ["cli", "prompt-toolkit", "commandline", "inquirer", "development", "interactive", "prompt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [{ include = "InquirerPy" }]
include = ["InquirerPy/py.typed"]

[tool.poetry.dependencies]
Sphinx = { version = "^4.1.2", optional = true }
furo = { version = "^2021.8.17-beta.43", optional = true }
myst-parser = { version = "^0.15.1", optional = true }
pfzy = "^0.3.1"
prompt-toolkit = "^3.0.1"
python = "^3.9"
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-copybutton = { version = "^0.4.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.0"
coverage = {extras = ["toml"], version = "^7.0"}
griffe = "^1.0"
isort = "^5.13"
pre-commit = "^3.0"
pydocstyle = "^6.3"
pyright = "^1.1"
pytest = "^8.0"
pytest-cov = "^5.0"
python-semantic-release = "^9.0"
pyyaml = ">=6.0.1"

[tool.poetry.extras]
docs = [
  "Sphinx",
  "furo",
  "myst-parser",
  "sphinx-autobuild",
  "sphinx-copybutton"
]

[tool.pydocstyle]
match = "^(?!(.*(init|main))).*\\.py"
convention = "pep257"
add-ignore = "D107"
match_dir = "^(?!(example)).*"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "(master|main)"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
upload_to_vcs_release = true
